# AlgoGRIS

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  sg_AbstractSpatAlgorithm.cpp  sg_AbstractSpatAlgorithm.hpp  sg_DopplerSpatAlgorithm.cpp  sg_DopplerSpatAlgorithm.hpp  sg_DummySpatAlgorithm.hpp  sg_HrtfSpatAlgorithm.cpp  sg_HrtfSpatAlgorithm.hpp  sg_HybridSpatAlgorithm.cpp  sg_HybridSpatAlgorithm.hpp  sg_MbapSpatAlgorithm.cpp  sg_MbapSpatAlgorithm.hpp  sg_PinkNoiseGenerator.cpp  sg_StereoSpatAlgorithm.cpp  sg_StereoSpatAlgorithm.hpp  sg_VbapSpatAlgorithm.cpp  sg_VbapSpatAlgorithm.hpp  tests.cpp
.github/workflows/: build_and_test.yml  build_spatgris.yml  precommit.yml
Containers/: sg_AtomicUpdater.hpp  sg_LogBuffer.hpp  sg_OwnedMap.hpp  sg_StaticMap.hpp  sg_StaticVector.hpp  sg_StrongArray.hpp  sg_TaggedAudioBuffer.hpp
Data/: sg_AudioStructs.cpp  sg_AudioStructs.hpp  sg_CommandId.hpp  sg_LegacyLbapPosition.cpp  sg_LegacyLbapPosition.hpp  sg_LegacySpatFileFormat.cpp  sg_LegacySpatFileFormat.hpp  sg_LogicStrucs.cpp  sg_LogicStrucs.hpp  sg_Narrow.hpp  sg_PolarVector.cpp  sg_PolarVector.hpp  sg_Position.cpp  sg_Position.hpp  sg_SpatMode.cpp  sg_SpatMode.hpp  sg_constants.cpp  sg_constants.hpp
Data/StrongTypes/: sg_CartesianVector.cpp  sg_CartesianVector.hpp  sg_Dbfs.hpp  sg_Degrees.hpp  sg_Radians.hpp  sg_SourceIndex.hpp  sg_StrongFloat.hpp  sg_StrongIndex.hpp
Implementations/: sg_mbap.cpp  sg_mbap.hpp  sg_vbap.cpp  sg_vbap.hpp
StructGRIS/: Quaternion.hpp  ValueTreeUtilities.cpp  ValueTreeUtilities.hpp
benchmark_viewer/: index.html
benchmarks/Linux/: 20250616_192018_e342971f8585ea9ea9910ba3049e7756b6cca6b5.xml  20250616_200621_e5a1913a2da7253311dacf8c104fe33b09b9bc4e.xml  20250616_202435_d4945fce392fef349b464b70b58e89df5880bb9c.xml  20250617_135303_b2ce1e568dda96c91d23f1bee6a71f39fe9b2bbf.xml  20250617_140450_bdbfae7524a4e28854f61b81f770600d58f5bcd8.xml  20250617_155050_4c8a0953594ff6b3204c07ede2f90e701e5ddc75.xml  20250617_212912_b1bb3fbb6e22d9b7c2beb86bbc2214e02054d0f4.xml  20250617_231200_534a35cda5ead485ddc84be2f70ee77a551a8630.xml  20250619_211724_9f626e7116c7cba3cab5697ace8e5bfe4a140033.xml  20250620_200410_190e2d150e57ecd59c6963d8212910463163bd80.xml  20250620_214649_b5ce5b09a536a5482c94938357d23ab1b1c1ae2d.xml  20250624_150106_d6f09ea54af58edfd7a93b7bcbda3f306ccc1817.xml  20250624_175703_14b39efe6c319cc63e506b82421b89f207b7da6c.xml  20250624_194303_b902990c2b082b4b41072550c40fcacd8b929ed3.xml  20250624_212622_3c478e1621f1eda4f1692685b9749229eee35b8e.xml  20250625_183902_1d2ee1b61a94177407b73178c95119478644b58c.xml  20250625_205126_a981e9522bffdc4c5dd6675a3ba36c95f2ea7e13.xml  20250625_212152_f937bdf90038490517b866120a1566608d0ae048.xml  20250626_152315_f937bdf90038490517b866120a1566608d0ae048.xml  20250626_154104_da7e08de0b4ade2a7d081aa0d0f7e3f3749e3d20.xml  20250626_154730_8ce9345317a8755e1f205728b03ec74ac8fade18.xml  20250626_160440_b18b4d83cf9c27bf114010fe4eb563ff849cb46b.xml  20250626_190314_8760bdea6316dc66b0e4ef2cc12ecbd3d0b12875.xml  20250626_193635_ad49848df2df47e4a15a4454f7c1adf46ac41632.xml  20250626_205855_0e6783d7203e12a6913ae8e74e4c899886aaa07c.xml  20250627_184501_55708b6b45527a2f3c8aeb486fcfa936758c3cc8.xml  20250627_190139_5e4b068906dc30c6a2b23b90e13a289fa59cf9e9.xml  20250627_193042_f937bdf90038490517b866120a1566608d0ae048.xml  20250707_142242_dcb3f646b44b4b9a199f181a94cfa1e7f0c6536c.xml  20250708_141113_12f29a2621a96a801dc27038d4bfa7c6b34bcd5d.xml  20250708_185757_f4b837085008e0d7b0f4b6a1c7a9751ec9fc96f8.xml  20250714_201411_647fd6cc4cdd623ac1481179af88926dd466914d.xml  20250715_143613_7695aba171e003784c88681f32405de3b421d0ce.xml  20250715_193659_4804f7c033beadd4e527fb3d1274fea71d9effac.xml  20250716_164327_8763d6c71730b6707ec3724b359989c174c60f75.xml  20250716_170541_8763d6c71730b6707ec3724b359989c174c60f75.xml  20250716_212906_c546ab632fd0097154819bec0a64298044137cae.xml  20250716_214933_ed07aad58e033110f21eb171ed692665c511dd93.xml  20250717_142550_b33807c806779eeec83e5dcd6d3108f5131f5afc.xml  20250717_202404_2419049550fafd714828ae7162ab51f939989b3d.xml  (+31 more)
benchmarks/Windows/: 20250616_192933_e342971f8585ea9ea9910ba3049e7756b6cca6b5.xml  20250616_201545_e5a1913a2da7253311dacf8c104fe33b09b9bc4e.xml  20250616_203313_d4945fce392fef349b464b70b58e89df5880bb9c.xml  20250617_141353_bdbfae7524a4e28854f61b81f770600d58f5bcd8.xml  20250617_160209_4c8a0953594ff6b3204c07ede2f90e701e5ddc75.xml  20250617_213715_b1bb3fbb6e22d9b7c2beb86bbc2214e02054d0f4.xml  20250617_232115_534a35cda5ead485ddc84be2f70ee77a551a8630.xml  20250618_210839_410a5fd5348bb2264f2b8f0ea37f7d464cd96921.xml  20250619_163329_70e4b47bcbd49b3931e498e8b121ebc72c083e84.xml  20250619_183845_d4dfb51fb56403e6f1d71cecbc5c3e93b077e2e4.xml  20250619_212653_9f626e7116c7cba3cab5697ace8e5bfe4a140033.xml  20250620_201354_190e2d150e57ecd59c6963d8212910463163bd80.xml  20250620_214446_b5ce5b09a536a5482c94938357d23ab1b1c1ae2d.xml  20250624_150516_d6f09ea54af58edfd7a93b7bcbda3f306ccc1817.xml  20250624_160932_279c29fd30b38887ffe6d839bc927483b63ab55f.xml  20250624_180218_14b39efe6c319cc63e506b82421b89f207b7da6c.xml  20250624_194935_b902990c2b082b4b41072550c40fcacd8b929ed3.xml  20250624_213328_3c478e1621f1eda4f1692685b9749229eee35b8e.xml  20250625_184439_1d2ee1b61a94177407b73178c95119478644b58c.xml  20250625_205932_a981e9522bffdc4c5dd6675a3ba36c95f2ea7e13.xml  20250625_212803_f937bdf90038490517b866120a1566608d0ae048.xml  20250626_152011_f937bdf90038490517b866120a1566608d0ae048.xml  20250626_154314_8ce9345317a8755e1f205728b03ec74ac8fade18.xml  20250626_154634_da7e08de0b4ade2a7d081aa0d0f7e3f3749e3d20.xml  20250626_161020_b18b4d83cf9c27bf114010fe4eb563ff849cb46b.xml  20250626_190857_8760bdea6316dc66b0e4ef2cc12ecbd3d0b12875.xml  20250626_194145_ad49848df2df47e4a15a4454f7c1adf46ac41632.xml  20250626_210536_0e6783d7203e12a6913ae8e74e4c899886aaa07c.xml  20250627_185126_55708b6b45527a2f3c8aeb486fcfa936758c3cc8.xml  (+34 more)
docs/: index.html
scripts/: load-benchmarks.js
tests/: Catch2Main.cpp  sg_TestUtils.cpp  sg_TestUtils.hpp  tests.cpp
(+68 files in other folders)
